Downgraded Project to Java 8